--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   
   <!-- Project -->
   <script type="module" src="main.js"></script>
+  <script type='text/javascript' src='//pl24021803.highratecpm.com/86/a4/bf/86a4bf27d8dd434393eceb274ee6605e.js'></script>
 </body>
 </html>
