--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 </head>
 <body>
   
-    <button id="left">left</button>
-    <button id="right">right</button>
-    <button id="down1">down1</button>
-    <button id="move">move</button>
+    <button id="m1">move1</button>
+    <button id="m2">move2</button>
+    <button id="m3">move3</button>
+    <button id="m4">move4</button>
+    <button id="m5">move5</button>
   
   <!-- Project -->
   <script type="module" src="main.js"></script>
