--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="RKLe_O85o5msRktG-xS-lVHovOP-lPQQ_x1MKJNzCQ8" />
 
   <title>online truck game</title>
   
