--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </head>
 <body id="myDIV">
   <div id="fullscreenIcon">&#x26F6;</div>
-  <!--
+
     <button id="m1">move1</button>
     <button id="m2">move2</button>
     <button id="m3">move3</button>
     <button id="m4">move4</button>
     <button id="m5">move5</button>
   
-   Project -->
+    <!-- Project -->
 
 
 
