--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button id="m3">move3</button>
     <button id="m4">move4</button>
     <button id="m5">move5</button>
-   <button id="m6">RI</button>
+   <button id="m6" onclicl="window.location.reload()">RI</button>
     <!-- Project -->
 
 
