--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body id="myDIV">
+<!----ads code----->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2930750511425269"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-3+1f-3d+2z"
+     data-ad-client="ca-pub-2930750511425269"
+     data-ad-slot="6148111579"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+
+
+
+
+
+
+
+     
   <div id="fullscreenIcon">&#x26F6;</div>
 
     <button id="m1">move1</button>
