--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2930750511425269"
      crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-2930750511425269">
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="RKLe_O85o5msRktG-xS-lVHovOP-lPQQ_x1MKJNzCQ8" />
+
+
+
+
+
+		<meta name="referrer" content="no-referrer" />
+	
+		<meta name="keywords" content="" />
+		<meta name="description" content="Play game online arnal!" />
+		<meta name="theme-color" content="#004080" />
+		<meta name="application-name" content="play game online" />
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+
+
+
+
+  
 
   <title>play game online</title>
   
